[project]
name = "epic-seven-guild-wars-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prettytable>=3.17.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
